--- a/ttcc.html
+++ b/ttcc.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello Everyone its me</h1>
-    <h2>this is for demo</h2>
+    <h1>Hello Everyone</h1>
+    <h3> i dont know to use git</h3>
 </body>
 </html>
